--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
       body {font-family:orbitron;background-color: #000000}
       h1 {width:100%;color:white}
       p {text-align: center; color: white}
-      table {color: white;border: 1px solid white}
+      table, td, th, tr{color: white;border: 1px solid white; border-collapse: collapse}
+      .cantitem {text-align: right}
       .controls {position:absolute; top:10%; width:100%; height:90%}
-      .controlscontainer {position:fixed;right:0px; top:0px; left:70%; height:100%; background-color: #111111;border:1px solid black; z-index:1}
+      .controlscontainer {position:fixed;right:0px; top:0px; left:70%; height:100%; width:30%; background-color: #111111;border:1px solid black; z-index:1;overflow-y: auto}
       .modalReservationTime {position: fixed; width: 100%; height: 100%; background-color: black; z-index:201; padding-top: 25%}
-      .sumarmismoitem {text-align:center; position:absolute; right: 32%; width:5%; height: 4vh; background-color: #109010; color: white}
-      .quitarmismoitem {text-align:center;position: absolute; right: 27%;width:5%; height: 4vh; background-color: #901010; color: white}
+      .monto {text-align: right;}
+      .orderscontainer {height: 96%; overflow-y: auto}
+      .sumarmismoitem {position: relative; margin-left: 5px; padding: 0px; text-align:center; top:50%; width:20px; height: 20px; background-color: #109010; color: white; border: 0px}
+      .quitarmismoitem {position: relative; margin-left: 5px; padding: 0px; text-align:center; top:50%; width:20px; height: 20px; background-color: #901010; color: white; border: 0px}
       .reserved {position:absolute; width:20px; height:20px; top:-16%; left:-16%; border-radius: 50%; background-color: #ffa200; z-index:200}
       .table {border:0.5vh solid white;position:absolute;width:10vh;height:10vh;background-color: #000000;text-align: center;vertical-align:center;line-height:5vh}
       .reservationTimecontainer {position: absolute; width:30%; height: 15%; vertical-align: middle;}
       .table:hover {cursor: pointer}
       .tablecontainer {position:fixed;top:0px;left:0px;width:100%; height:100%; z-index: 2; background-color: black}
       .tableheader {position:absolute;top:0px;height:10%;width:100%;text-align:center}
-      #closetable {position:absolute;width:100%;height:10%;bottom:0px;background-color:#cc2222;color:white;font-size:5vh}
+      #closetable {position:fixed;width:30%;height:10%;bottom:0px;background-color:#cc2222;color:white;font-size:5vh;line-height:%}
       #opentable {width:100%; height:100%; position: absolute; top:10%;z-index:99;background-color:#22cc22;color:white;font-size:5vh}
       #orderTable {width:100%}
       #reservetable {margin: 1vh; font-size: 3vh !important; line-height:2.5vh; width:5vh; height:5vh; position: absolute;z-index:99;background-color:#ffa200;color:white;font-size:5vh; border-radius: 50%}
@@ -104,9 +107,6 @@
       this.client = "";
     }
   }
-
-  var socket = io();
-  var intervals = new Array(5);
   class TABLE {
     constructor() {
       this.isOpen = false;
@@ -116,6 +116,12 @@
       this.orders = new Array()
     }
   }
+
+  var socket = io();
+  var intervals = new Array(5);
+  var orderNotification = new Audio('/order.mp3');
+  var openNotification = new Audio('/open.mp3');
+  var closedNotification = new Audio('/closed.mp3');
   Number.prototype.toFixedDown = function(digits) {
     var n = this - Math.pow(10, -digits)/2;
     n += n / Math.pow(2, 53); // added 1360765523: 17.56.toFixedDown(2) === "17.56"
@@ -181,13 +187,29 @@
     }
   });
   $('#addproduct').on('click', function() {
+    var tablealtered = $('#tablename').text()[5];
     itemval = $('#products option:selected').val().split(',');
-    console.log(itemval);
+    itemval.push($('#products option:selected').text());
     //alterar mesa
+    tables[tablealtered-1].orders.push(itemval);
+    console.log('Agregado item "' + itemval + '" a la mesa ' + Number(tablealtered));
     //AÑADIR ITEM CON SU NOMBRE, COSTO Y BOTON DE QUITAR
-    var markup = "<tr class='" + itemval[1] + "'><td>" + $('#products option:selected').text() + "</td><td><span class='cantitem' style='color:white'>1</span><input class='sumarmismoitem' type='button' value='+'><input class='quitarmismoitem' type='button' value='-'></td><td class='monto'>" + itemval[0] + "</td><td> <input class='quitardelista' type='button' value='Quitar'></td></tr>";
+    var markup = "<tr class='" + itemval[1] + "'><td>" + $('#products option:selected').text() + "</td><td class='cantitem'>1<input class='sumarmismoitem' type='button' value='+'><input class='quitarmismoitem' type='button' value='-'></td><td class='monto'>" + itemval[0] + "</td><td> <input class='removeFromList' type='button' value='Quitar'></td></tr>";
     $("#orderTable tr:last").after(markup);
+    socket.emit('alteredorders', [tables, tablealtered]);
     //costo total para la mesa
+  })
+  $("#orderTable").on('click', '.removeFromList', function() {
+    var item = $(this).parent().parent().find('td:first').text();
+    var tablealtered = $('#tablename').text()[5];
+    for(var i = 0; i<tables[tablealtered-1].orders.length; i++) {
+      if(tables[tablealtered-1].orders[i].includes(item)) {
+        console.log('contiene ' + item + ' en posicion ' + i);
+        tables[tablealtered-1].orders.splice(i,1)
+      };
+    }
+    $(this).closest('tr').remove();
+    socket.emit('alteredorders', [tables, tablealtered]);
   })
 
   $('#opentable').on('click', function() {
@@ -205,15 +227,17 @@
 
   $('#closetable').on('click', function() {
     if (confirm('Cerrar mesa?')) {
-      var tableclosed = $(this).parent().parent().find('h1').text();
-      $('#table' + tableclosed[5]).css('background-color', '#000000');
-      tables[tableclosed[5]-1].isOpen = false;
+      var tableclosed = $('#tablename').text()[5];
+      $('#table' + tableclosed).css('background-color', '#000000');
+      tables[tableclosed-1].isOpen = false;
+      tables[tableclosed-1].orders = [];
+      populateOrderTable(tableclosed-1)
       $('#closetable').fadeOut('fast');
       $('#opentable').fadeIn('fast');
-      $('#clock' + tableclosed[5]).fadeOut();
-      clearInterval(intervals[tableclosed[5]-1]);
-      console.log('Cerrando mesa '+ tableclosed[5]);
-      socket.emit('tableclosed', [tables, tableclosed[5]]);
+      $('#clock' + tableclosed).fadeOut();
+      clearInterval(intervals[tableclosed-1]);
+      console.log('Cerrando mesa '+ tableclosed);
+      socket.emit('tableclosed', [tables, tableclosed]);
     }
   });
 
@@ -223,16 +247,17 @@
 
   $('.table').on('click', function(e) {
     e.stopPropagation();
-    var tableclicked = $(this).attr('id');
-    if (tables[tableclicked[5]-1].isOpen == true) {
-      populateOrderTable(tableclicked[5]-1);
+    var tableclicked = $(this).attr('id')[5];
+    console.log(tables[tableclicked-1].orders);
+    if (tables[tableclicked-1].isOpen == true) {
+      populateOrderTable(tableclicked-1);
       $('#opentable').hide();
       $('#closetable').show();
     } else {
       $('#opentable').show();
       $('#closetable').hide();
     }
-    $('#tablename').text("Mesa " + tableclicked[5]);
+    $('#tablename').text("Mesa " + tableclicked);
     $('#tablecontainer').animate({width: '70%'});
   });
 
@@ -262,7 +287,9 @@
     $('#orderTable').empty();
     $('#orderTable').append("<tr><th>Item</th><th>Cantidad</th><th>Precio</th><th></th></tr>");
     for (var i = 0; i<tables[table].orders.length; i++) {
-      $('#orderTable').append("<tr><td>" + tables[table].orders[i] + "</td><td><span class='cantitem' style='color:white'>1</span><input class='sumarmismoitem' type='button' value='+'><input class='quitarmismoitem' type='button' value='-'></td><td class='monto'>" + 5 + "</td><td> <input class='quitardelista' type='button' value='Quitar'></td></tr>");
+      order = tables[table].orders[i];
+      var markup = "<tr class='" + order[1] + "'><td>" + order[2] + "</td><td class='cantitem'>1<input class='sumarmismoitem' type='button' value='+'><input class='quitarmismoitem' type='button' value='-'></td><td class='monto'>" + order[0] + "</td><td> <input class='removeFromList' type='button' value='Quitar'></td></tr>";
+      $("#orderTable tr:last").after(markup);
     }
   }
 
@@ -272,16 +299,25 @@
 
   $(function() {
     socket.on('tableopenedres', function(num){
-      console.log('Abierta mesa '+ num);
+      console.log('Mesa '+ num + ' abierta');
       tables[num-1].isOpen = true;
       $('#table' + num).css('background-color', '#22cc22');
       $('#clock' + num).fadeIn();
+      openNotification.play();
     });
     socket.on('tableclosedres', function(num){
-      console.log('Cerrada mesa ' + num);
+      console.log('Mesa ' + num + ' cerrada');
       tables[num-1].isOpen = false;
+      tables[num-1].orders = [];
       $('#table' + num).css('background-color', '#000000');
       $('#clock' + num).fadeOut();
+      closedNotification.play();
     });
+    socket.on('alteredordersres', function(newData) {
+      console.log('Ordenes alteradas de mesa ' + newData[1]);
+      console.log('Orden ' + newData[1]);
+      tables[newData[0]-1].orders = newData[1];
+      orderNotification.play();
+    })
   })
 </script>
