--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
   var socket = io();
   var intervals = new Array(5);
   var orderNotification = new Audio('/order.mp3');
+  //Notification sounds downloaded from https://notificationsounds.com
+  //Provided under a Creative Commons Attribution license https://creativecommons.org/licenses/by/4.0/legalcode
   var openNotification = new Audio('/open.mp3');
   var closedNotification = new Audio('/closed.mp3');
   Number.prototype.toFixedDown = function(digits) {
