--- a/index.html
+++ b/index.html
@@ -17,27 +17,29 @@
       .controls {position:absolute; top:10%; width:100%; height:90%}
       .controlscontainer {position:absolute;right:0px; top:0px; left:70%; height:90%; width:30%; border-radius: 2%;background-color: #222233;border:1px solid black; z-index:1;overflow-y: auto}
       .modalReservationTime {position: absolute; top:0;left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); z-index:201;display: flex; align-items: center; justify-content: center; flex-direction: column;}
+      #modalCalendar {position: absolute; top:0;left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); z-index:201;display: flex; align-items: center; justify-content: center; flex-direction: column;}
       .monto {text-align: right;}
       .orderscontainer {margin: 0px;height: 90%; overflow-y: auto}
       .products {width:80% }
       .addsame {position: relative; margin-left: 5px; padding: 0px; text-align:center; top:50%; width:20px; height: 20px; color: white; border: 0px; background-color: #00cc00}
       .removesame {position: relative; margin-left: 5px; padding: 0px; text-align:center; top:50%; width:20px; height: 20px; background-color: #901010; color: white; border: 0px}
-      .reservationControls {font-size: 3vh !important; line-height:2.5vh; width:10vh; height:10%; position: absolute;background-color:rgba(0,0,0,0);color:white;font-size:5vh; border-radius: 0}
+      .reservationControls {right:0px;font-size: 3vh !important; line-height:2.5vh; width:10vh; height:10%; position: absolute;background-color:rgba(0,0,0,0);color:white;font-size:5vh;}
       .reserved {position:absolute; width:20px; height:20px; top:-16%; left:-16%; border-radius: 50%; background-color: #ffa200; z-index:200}
       .table {border:0.5vh solid white;border-radius: 7%; position:absolute;width:10vh;height:10vh;background-color: #000000;text-align: center;vertical-align:center;line-height:5vh}
-      .reservationParameters {width: 100%;height;30%}
-      .reservationTimecontainer {position: absolute; width:30%; height: 20%; display: flex; align-items: center; justify-content: center; flex-direction: column;}
+      .reservationParameters {width: 100%;height;30%;margin:2%}
+      .reservationTimecontainer { padding: 5px;overflow: hidden;border: 2px solid white; border-radius: 10%; position: absolute; width:20%; height: 30%}
       .table:hover {cursor: pointer}
       .tablecontainer {position:fixed;top:0px;left:0px;width:100%; height:100%; z-index: 2; background-color: black}
       .tableheader {position:absolute;top:0px;height:10%;width:100%;text-align:center}
       .totaltable{ width:100%}
       #addproduct {height: :100%; background-color: #ffeb38}
       #closetable {position:fixed;padding: 0px; margin:0px;width:30%;height:10%;bottom:0px;background-color:#cc2222;color:white;font-size:5vh;border-radius: 5%}
-      #listReservations {position:absolute;; height: 2.5vh;top:6%}
+      #confirmReservation { position: absolute;left:-2px;bottom: 0; width:101%; height:20%}
+      #listReservations {position:absolute; height: 2.5vh;bottom:5px}
       #opentable {width:30%; height:100%; position: fixed; top:15%;z-index:99;background-color:#22cc22;color:white;font-size:5vh}
       #orderTable {width:100%}
-      #reservetable {margin: 1vh; font-size: 3vh !important; line-height:2.5vh; width:5vh; height:5vh; position: absolute;z-index:99;background-color:#ffa200;color:white;font-size:5vh; border-radius: 50%}
-      #reservationParameters {height:75%;display: flex; align-items: center; justify-content: center; flex-direction: column}
+      #reservetable {margin: 5px; font-size: 3vh !important; line-height:2.5vh; width:5vh; height:5vh; position: absolute;right: 0;z-index:99;background-color:#ffa200;color:white;font-size:5vh; border-radius: 30%}
+      #reservationParameters {height:75%; width:96%;display: flex; align-items: center; justify-content: center; flex-direction: column}
     </style>
   </head>
   <body>
@@ -76,11 +78,11 @@
       <div class="tableheader">
         <h1 id='tablename'></h1>
       </div>
+      <input type="button" id='opentable' value="Abrir mesa">
       <div class="reservationControls">
-        <input type="button" id='opentable' value="Abrir mesa">
         <input type="button" id='reservetable' value="R">
+        <input type="button" id='listReservations' value="Ver reservas">
       </div>
-      <input type="button" id='listReservations' value="Ver reservas">
       <div class="controls" id='controls'>
         <div class="orderscontainer" id="orderscontainer">
           <div class="addcontrols">
@@ -114,9 +116,12 @@
           <input class='reservationParameters' type="text" id='reservationclient' placeholder="Nombre del cliente">
           <input class='reservationParameters' type="datetime-local" id='reservationdateInput'>
           <input class='reservationParameters' type="number" id="partyOfReservation" placeholder="Cantidad de comensales">
-          <input type="button" id="confirmReservation" value="Aceptar">
         </div>
+        <input type="button" id="confirmReservation" value="Aceptar">
       </div>
+    </div>
+    <div id="modalCalendar">
+
     </div>
   </body>
 </html>
@@ -206,6 +211,15 @@
     }
   }
 
+  function computeTotal() {
+    console.log('comp');
+    var total = 0;
+    $('tr').each(function() {
+      total = total + (Number($(this).find('.monto').text()) * Number($(this).find('.cantitem').text()));
+    })
+    return(total);
+  }
+
   $('#clock1').hide();
   $('#clock2').hide();
   $('#clock3').hide();
@@ -217,6 +231,12 @@
   $('#reserved4').hide();
   $('#reserved5').hide();
   $('#modalReservationTime').hide();
+  $('#modalCalendar').hide();
+  $('#modalCalendar').load('/calendar.html', function() {
+    $('.wrapper').on('click', function () {
+        $('#modalCalendar').fadeOut();
+    })
+  })
 
   $.getJSON("/productos.json", function(response) {
     var sel = $('#products');
@@ -258,8 +278,10 @@
     //AÑADIR ITEM CON SU NOMBRE, COSTO Y BOTON DE QUITAR
     var markup = "<tr id='o" + tables[tablealtered-1].orders.length + "' class='" + itemval[1] + "'><td>" + $('#products option:selected').text() + "</td><td class='cantitem'>1<input class='addsame' type='button' value='+'><input class='removesame' type='button' value='-'></td><td class='monto'>" + itemval[0] + "</td><td> <input class='removeFromList' type='button' value='Quitar'></td></tr>";
     $("#orderTable tr:last").after(markup);
+    $('#total').text(computeTotal());
+    tables[tablealtered-1].total = computeTotal();
     socket.emit('alteredorders', [tables, tablealtered]);
-    //costo total para la mesa
+
   })
 
   $("#orderTable").on('click', '.removeFromList', function() {
@@ -272,6 +294,8 @@
       };
     }
     $(this).closest('tr').remove();
+    $('#total').text(computeTotal());
+    tables[$('#tablename').text()[5]-1].total = computeTotal();
     socket.emit('alteredorders', [tables, tablealtered]);
   })
   $("#orderTable").on('click', '.addsame', function(e) {
@@ -279,6 +303,8 @@
     tables[$('#tablename').text()[5]-1].orders[$(this).closest('tr').attr('id')[1]][3]++;
     var markup = "<input class='addsame' type='button' value='+'><input class='removesame' type='button' value='-'>";
     $(this).closest('.cantitem').html(Number($(this).closest('.cantitem').text())+1 + markup);
+    $('#total').text(computeTotal());
+    tables[$('#tablename').text()[5]-1].total = computeTotal();
     socket.emit('alteredorders', [tables, $('#tablename').text()[5]]);
   })
   $("#orderTable").on('click', '.removesame', function(e) {
@@ -287,6 +313,8 @@
     if (Number($(this).closest('.cantitem').text()) > 1 ) {
       tables[$('#tablename').text()[5]-1].orders[$(this).closest('tr').attr('id')[1]][3]--;
       $(this).closest('.cantitem').html(Number($(this).closest('.cantitem').text())-1 + markup);
+      $('#total').text(computeTotal());
+      tables[$('#tablename').text()[5]-1].total = computeTotal();
       socket.emit('alteredorders', [tables, $('#tablename').text()[5]]);
     }
   })
@@ -333,6 +361,7 @@
     if (tables[tableclicked-1].isOpen == true) {
       $('#opentable').hide();
       $('#closetable').show();
+      $('#total').text(computeTotal());
     } else {
       $('#opentable').show();
       $('#closetable').hide();
@@ -365,7 +394,6 @@
     var newReservation = new Reservation();
     var forDate = new Date();
     tables[mesa-1].isReserved= true;
-    $('#reserved' + mesa).show();
     forDate.setMinutes(unfDate.split(':')[1]);
     forDate.setHours(unfDate.split('T')[1].split(':')[0]);
     forDate.setDate(unfDate.split('-')[1]);
@@ -378,6 +406,12 @@
     tables[mesa-1].reservations.push(newReservation);
     socket.emit('alteredreserv', [tables, mesa]);
     $('#modalReservationTime').fadeOut();
+  })
+  $('#listReservations').on('click', function() {
+      $('#modalCalendar').fadeIn();
+      $('.calendar').on('click', function(e) {
+        e.stopPropagation();
+      });
   })
 
   setInterval(function () {
@@ -416,8 +450,10 @@
       console.log('Orden ' + newData[1]);
       tables[newData[0]-1].orders = newData[1];
       if ($('#tablename').text()[5] == newData[0]) {
-        populateOrderTable(newData[0]-1)
+        populateOrderTable(newData[0]-1);
+        $('#total').text(computeTotal());
       }
+      tables[newData[0]-1].total = computeTotal();
       orderNotification.play();
     })
     socket.on('alteredreservres', function(newData) {
